allow customize JVM parameters